# Admin8.3.0

./: CMakeLists.txt  LICENSE  README.md  aprende1.txt  aprende2.txt  aprende3.txt  main.cpp
src/api/: NLPEngine.cpp  NLPEngine.hpp
src/common/: DialogueContext.hpp  types.hpp
src/core/: Command.cpp  Command.hpp  Dialogue.cpp  Dialogue.hpp  InferenceEngine.cpp  InferenceEngine.hpp  InferenceRule.hpp  Pattern.cpp  Pattern.hpp  Sentence.cpp  Sentence.hpp  Word.cpp  Word.hpp
src/db/: DatabaseManager.cpp  DatabaseManager.hpp  DialogueRepository.cpp  DialogueRepository.hpp  PatternRepository.cpp  PatternRepository.hpp  SentenceRepository.cpp  SentenceRepository.hpp  TemplateRepository.cpp  TemplateRepository.hpp  WordRepository.cpp  WordRepository.hpp
src/dialogue/: ChunkCorrelator.cpp  ChunkCorrelator.hpp  ContextualCorrelator.cpp  ContextualCorrelator.hpp  PatternCorrelator.cpp  PatternCorrelator.hpp
src/nlp/: Classifier.cpp  Classifier.hpp  Morphology.cpp  Morphology.hpp  Refiner.cpp  Refiner.hpp  TagStats.cpp  TagStats.hpp  Tokenizer.cpp  Tokenizer.hpp
src/utils/: Chunker.cpp  Chunker.hpp  LearningHelpers.cpp  LearningHelpers.hpp  PatternUtils.cpp  PatternUtils.hpp  ResponseTemplates.cpp  ResponseTemplates.hpp  SentenceUtils.cpp  SentenceUtils.hpp  SlotFiller.cpp  SlotFiller.hpp  StringConversions.cpp  StringConversions.hpp
